﻿1.0.0 
- Initial release
1.0.1 / 2.0.1
- Fixed livestreams
1.0.2 / 2.0.2
- Fixed livestreams
1.0.3 / 2.0.3
- Fixed site changes
- Added better thumbs
1.0.4 / 2.0.4
- Added context menu "Add to queue"
2.0.5
- Fixed video listing
- Fixed polish site version
...

[B]Version 2.1.0  (16.09.2018)[/B] by realvito
- fixed: euronews - LIVE TV
- added: Video - Laufzeit und Plot 
- optimized: Script komplett überarbeitet und unnötige Inhalte entfernt

[B]Version 2.1.1  (30.09.2018)[/B] by realvito
- fixed: mehrfache Video-Links desselben Artikels
- added: Videos - bevorzugt über Youtube abspielen (höhere Qualität), sofern Link vorhanden (settings)