@@ -14,11 +14,16 @@
 - Fixed polish site version
 ...
 
-[B]Version 2.1.0  (16.09.2018)[/B] by realvito
+[B]Version 2.1.0  (16.09.2018)[/B] by realvito[CR]
 - fixed: euronews - LIVE TV
 - added: Video - Laufzeit und Plot 
 - optimized: Script komplett überarbeitet und unnötige Inhalte entfernt
 
-[B]Version 2.1.1  (30.09.2018)[/B] by realvito
+[B]Version 2.1.1  (30.09.2018)[/B] by realvito[CR]
 - fixed: mehrfache Video-Links desselben Artikels
 - added: Videos - bevorzugt über Youtube abspielen (höhere Qualität), sofern Link vorhanden (settings)
+
+[B]Version 2.1.2  (16.02.2019)[/B] by realvito[CR]
+- fixed: Es werden KEINE Unterordner der Startordner angezeigt
+- optimized: Doppelte Ordner werden jetzt herausgefiltert
+- added: Wenn KEINE Videos im Ordner vorhanden sind - Meldung eingebaut
